--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "webpack-merge": "^5.9.0"
   },
   "scripts": {
-    "start": "PORT=3002 react-scripts start",
+    "start": "react-scripts start",
     "build": "webpack --config webpack.prod.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
