--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-onclickoutside": "^6.7.4",
     "@uidotdev/usehooks": "^2.1.0",
     "avrgirl-arduino": "^5.0.1",
     "axios": "^1.4.0",
@@ -101,7 +102,7 @@
     "webpack-merge": "^5.9.0"
   },
   "scripts": {
-    "start": "PORT=3002 react-scripts start",
+    "start": "react-scripts start",
     "build": "webpack --config webpack.prod.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
