--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "blockly": "^5.20210325.1",
     "blockly-field-color-wheel": "^1.0.2",
     "connected-react-router": "^6.9.3",
-    "history": "^5.3.0",
+    "history": "4.7.2",
     "lodash": "^4.17.21",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
