--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
     "@svgdotjs/svg.panzoom.js": "^2.1.1",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@types/react-onclickoutside": "^6.7.4",
+    "@uidotdev/usehooks": "^2.1.0",
     "avrgirl-arduino": "^5.0.1",
     "axios": "^1.4.0",
     "blockly": "^5.20210325.1",
     "blockly-field-color-wheel": "^1.0.2",
-    "connected-react-router": "^6.4.0",
-    "history": "4.7.2",
+    "connected-react-router": "^6.9.3",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "prismjs": "^1.29.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-onclickoutside": "^6.13.0",
-    "react-redux": "^7.1.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-switch": "7.0.0",
@@ -75,6 +75,7 @@
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss": "^8.2.15",
     "postcss-import": "^13.0.0",
     "postcss-load-config": "^4.0.1",
@@ -94,14 +95,14 @@
     "ts-loader": "^9.4.4",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.3",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --config webpack.prod.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
